--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 
                 </div>
     <h4>Mobile number</h4>
-    <p>9657435746</p>
+    <p>123423434</p>
     <h4>Email Id</h4>
-      <p>gdjdbxh@gmail.com</p>
+      <p>xyz@gmail.com</p>
     </div>
          </section>
          <script src="script.js"></script>
