--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
                 <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="file:///storage/emulated/0/comp.jpg" class="d-block w-100" alt="...">
-      <h2>Website for Fashion designing</h2>
+      <img src="pro1.jpg" class="d-block w-100" alt="...">
+      <h2>Website based on tailoring and designing for women to enhance their skills at home. </h2>
       <button class="vis">Preview</button>
     </div>
     <div class="carousel-item">
-      <img src="file:///storage/emulated/0/comp.jpg" class="d-block w-100" alt="...">
-      <h2>Website for Fashion designing</h2>
+      <img src="pro2.jpg" class="d-block w-100" alt="...">
+      <h2>Website for Zakat Calculator in Indian rupees.</h2>
       <button class="vis">Preview</button>
     </div>
-    <div class="carousel-item"><img src="file:///storage/emulated/0/comp.jpg" class="d-block w-100" alt="...">
-      <h2>Website for Fashion designing</h2>
+    <div class="carousel-item"><img src="pro3.jpg" class="d-block w-100" alt="...">
+      <h2>Website for College students to study easier with given effective notes.</h2>
       <button class="vis">Preview</button>
         
       </div>
