--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
              </div>
             <section id="about">
             <div class="about"><h1>About me</h1><p> A meticulous and organized individual. Strong ability to solve complex projects and capable of mastering new technologies. Willing to contribute new ideas and learn new things.</p><div class="btn justify-content-center d-flex gap-3">
-            <button>
+            <button ><a href="https://mail.google.com/mail/">
                 Hire me
-            </button>
+            </a></button>
             <button>
                 Resume
             </button>
@@ -115,15 +115,15 @@
                <div class="es1">
                    <h2 class="acd">S.S.K.V Matric.hr.Sec.School</h2>
            <h2 class="yr">2018-2019</h2>
-           <h2 class="per">Percentage : 85.6%</h2></div>
+           <h2 class="per">Percentage : 84.6%</h2></div>
            <div class="es2">
                <h2 class="acd">S.S.K.V Matric.hr.Sec.School</h2>
            <h2 class="yr">2020-2021</h2>
-           <h2 class="per">Percentage : 91%</h2></div>
+           <h2 class="per">Percentage : 91.7%</h2></div>
            <div class="es3">
                <h2 class="acd">S.S.K.V College of Arts and Science </h2>
            <h2 class="yr">2021-2024</h2>
-           <h2 class="per">Percentage : 85.7%</h2></div></div>
+           <h2 class="per">Percentage : 86%</h2></div></div>
        </section>
       <section id="skill">
            
@@ -172,17 +172,17 @@
     <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="pro1.jpg" class="d-block w-100" alt="...">
-      <h2>Website based on tailoring and designing for women to enhance their skills at home. </h2>
-      <button class="vis">Preview</button>
+      <h2>Website based on tailoring and designing<br>for women to enhance their skills at home</h2>
+      <button class="vis"><a href=" https://shaseenabarveen.github.io/Project1-webdesign/">Preview</a></button>
     </div>
     <div class="carousel-item">
       <img src="pro2.jpg" class="d-block w-100" alt="...">
-      <h2>Website for Zakat Calculator in Indian rupees.</h2>
-      <button class="vis">Preview</button>
+      <h2>Website for Zakat calculator in <br>Indian rupees</h2>
+      <button class="vis"><a href=" https://shaseenabarveen.github.io/Project2_webdesign/">Preview</a></button>
     </div>
     <div class="carousel-item"><img src="pro3.jpg" class="d-block w-100" alt="...">
-      <h2>Website for College students to study easier with given effective notes.</h2>
-      <button class="vis">Preview</button>
+      <h2>Website for maths students to study <br>easier with effective notes</h2>
+      <button class="vis"><a href="">Preview</a></button>
         
       </div>
     </div>
@@ -207,9 +207,9 @@
 
                 </div>
     <h4>Mobile number</h4>
-    <p>123423434</p>
+    <p>9657435746</p>
     <h4>Email Id</h4>
-      <p>xyz@gmail.com</p>
+      <p>gdjdbxh@gmail.com</p>
     </div>
          </section>
          <script src="script.js"></script>
